# shm_oma

./: .gitignore  COLAB_SETUP_INSTRUCTIONS.txt  GOOGLE_COLAB_GUIDE.md  GOOGLE_COLAB_TUTORIAL.py  LICENSE  README.md  analysis_results.txt  analyze_data.py  colab_simple.py  example_corrected_ssi_cov.py  example_usage.py  interactive_demo.py  minimal_example.py  pyproject.toml  quickstart.py  validate_full_pipeline.py
src/shm_oma/: __init__.py  automation.py  ssicov.py  tracking.py
tests/: test_automation.py  test_ssicov.py  test_tracking.py
